--- a/MRFOptimze/MRFOptimze.vcxproj
+++ b/MRFOptimze/MRFOptimze.vcxproj
@@ -83,6 +83,7 @@
     <ClInclude Include="LinkedBlockList.h" />
     <ClInclude Include="PictureHandler.h" />
     <ClInclude Include="SLIC.h" />
+    <ClInclude Include="timer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GCoptimization.cpp" />
@@ -92,6 +93,7 @@
     <ClCompile Include="maxflow.cpp" />
     <ClCompile Include="PictureHandler.cpp" />
     <ClCompile Include="SLIC.cpp" />
+    <ClCompile Include="timer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
