--- a/MRFOptimze/MRFOptimze.vcxproj.filters
+++ b/MRFOptimze/MRFOptimze.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="LinkedBlockList.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="timer.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -57,6 +60,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="maxflow.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="timer.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
