--- a/MRFOptimze/MRFOptimze.vcxproj.filters
+++ b/MRFOptimze/MRFOptimze.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="timer.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="ComSuperpixel.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -63,6 +66,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="timer.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="ComSuperpixel.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
