--- a/MRFOptimze/MRFOptimze.vcxproj
+++ b/MRFOptimze/MRFOptimze.vcxproj
@@ -77,6 +77,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="block.h" />
+    <ClInclude Include="ComSuperpixel.h" />
     <ClInclude Include="energy.h" />
     <ClInclude Include="GCoptimization.h" />
     <ClInclude Include="graph.h" />
@@ -86,6 +87,7 @@
     <ClInclude Include="timer.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ComSuperpixel.cpp" />
     <ClCompile Include="GCoptimization.cpp" />
     <ClCompile Include="graph.cpp" />
     <ClCompile Include="LinkedBlockList.cpp" />
