--- a/MRFOptimze/MRFOptimze.vcxproj.filters
+++ b/MRFOptimze/MRFOptimze.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="ComSuperpixel.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="MRFOptimize.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -70,6 +73,9 @@
     </ClCompile>
     <ClCompile Include="GCoptimization.cpp">
       <Filter>头文件</Filter>
+    </ClCompile>
+    <ClCompile Include="MRFOptimize.cpp">
+      <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
