--- a/SubSenseBS/SubSenseBS.vcxproj
+++ b/SubSenseBS/SubSenseBS.vcxproj
@@ -83,6 +83,7 @@
     <ClInclude Include="LBSP.h" />
     <ClInclude Include="RandUtils.h" />
     <ClInclude Include="SubSenseBSProcessor.h" />
+    <ClInclude Include="timer.h" />
     <ClInclude Include="videoprocessor.h" />
   </ItemGroup>
   <ItemGroup>
@@ -91,6 +92,7 @@
     <ClCompile Include="BGSSubsenseM.cpp" />
     <ClCompile Include="LBSP.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="timer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
