--- a/SubSenseBS/SubSenseBS.vcxproj.filters
+++ b/SubSenseBS/SubSenseBS.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="BGSSubsenseM.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="timer.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BackgroundSubtractorLBSP.cpp">
@@ -54,6 +57,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="BGSSubsenseM.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="timer.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
