add movie maker , debuging

--- a/SubSenseBS/SubSenseBS.vcxproj
+++ b/SubSenseBS/SubSenseBS.vcxproj
@@ -78,6 +78,7 @@
   <ItemGroup>
     <ClInclude Include="BackgroundSubtractorLBSP.h" />
     <ClInclude Include="BackgroundSubtractorSuBSENSE.h" />
+    <ClInclude Include="BGSMovieMaker.h" />
     <ClInclude Include="BGSSubsenseM.h" />
     <ClInclude Include="DistanceUtils.h" />
     <ClInclude Include="LBSP.h" />
