--- a/SubSenseBS/SubSenseBS.vcxproj
+++ b/SubSenseBS/SubSenseBS.vcxproj
@@ -82,6 +82,7 @@
     <ClInclude Include="BGSSubsenseM.h" />
     <ClInclude Include="DistanceUtils.h" />
     <ClInclude Include="LBSP.h" />
+    <ClInclude Include="LSBSP.h" />
     <ClInclude Include="RandUtils.h" />
     <ClInclude Include="SubSenseBSProcessor.h" />
     <ClInclude Include="timer.h" />
