--- a/SubSenseBS/SubSenseBS.vcxproj.filters
+++ b/SubSenseBS/SubSenseBS.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="BGSMovieMaker.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="LSBSP.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BackgroundSubtractorLBSP.cpp">
