implement lbp, result is not good

--- a/SubSenseBS/SubSenseBS.vcxproj
+++ b/SubSenseBS/SubSenseBS.vcxproj
@@ -81,6 +81,7 @@
     <ClInclude Include="BGSMovieMaker.h" />
     <ClInclude Include="BGSSubsenseM.h" />
     <ClInclude Include="DistanceUtils.h" />
+    <ClInclude Include="LBP.h" />
     <ClInclude Include="LBSP.h" />
     <ClInclude Include="LSBSP.h" />
     <ClInclude Include="RandUtils.h" />
