--- a/MovingCameraBS/MovingCameraBS.vcxproj
+++ b/MovingCameraBS/MovingCameraBS.vcxproj
@@ -77,6 +77,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Affine2D.h" />
+    <ClInclude Include="LBP.h" />
     <ClInclude Include="MotionTracker.h" />
     <ClInclude Include="params.h" />
     <ClInclude Include="prob_model.h" />
