--- a/MovingCameraBS/MovingCameraBS.vcxproj.filters
+++ b/MovingCameraBS/MovingCameraBS.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="prob_model.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="LBP.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
