--- a/SubSenseBS/SubSenseBS.vcxproj.filters
+++ b/SubSenseBS/SubSenseBS.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="STAT.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="LBP.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BackgroundSubtractorLBSP.cpp">
