--- a/GpuSubsenseM/GpuSubsenseM.vcxproj.filters
+++ b/GpuSubsenseM/GpuSubsenseM.vcxproj.filters
@@ -1,9 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClInclude Include="CudaSuperpixel.h">
-      <Filter>Cuda</Filter>
-    </ClInclude>
     <ClInclude Include="GpuSuperpixel.h">
       <Filter>Cuda</Filter>
     </ClInclude>
@@ -58,6 +55,12 @@
     <ClInclude Include="CudaBSOperator.h">
       <Filter>Cuda</Filter>
     </ClInclude>
+    <ClInclude Include="CudaSuperpixel.h">
+      <Filter>Cuda</Filter>
+    </ClInclude>
+    <ClInclude Include="LBSP.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="CudaSuperpixel.cu">
@@ -97,9 +100,6 @@
     <ClCompile Include="timer.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="GCoptimization.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="graph.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
@@ -116,6 +116,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="GCoptimization.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
