fix meanshift project

--- a/MeanShiftSample/MeanShiftSample.vcxproj
+++ b/MeanShiftSample/MeanShiftSample.vcxproj
@@ -76,7 +76,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main1.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="MeanShift.cpp" />
     <ClCompile Include="meanshiftSeg.cpp" />
     <ClCompile Include="segment.cpp" />
