--- a/MeanShiftSample/MeanShiftSample.vcxproj.filters
+++ b/MeanShiftSample/MeanShiftSample.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClCompile Include="segment.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="main1.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
