--- a/SubSenseBS/SubSenseBS.vcxproj.filters
+++ b/SubSenseBS/SubSenseBS.vcxproj.filters
@@ -77,6 +77,9 @@
     <ClCompile Include="timer.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="ASAPWarping.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="LBSP_16bits_dbcross_1ch.i">
