--- a/SubSenseBS/SubSenseBS.vcxproj
+++ b/SubSenseBS/SubSenseBS.vcxproj
@@ -75,7 +75,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>opencv_highgui249.lib;opencv_core249.lib;opencv_imgproc249.lib;opencv_features2d249.lib;opencv_calib3d249.lib;opencv_video249.lib;opencv_legacy249.lib;libumfpack.lib;libamd.lib;libf77blas.lib;libatlas.lib;libg2c.lib;libgcc.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opencv_highgui249.lib;opencv_core249.lib;opencv_imgproc249.lib;opencv_features2d249.lib;opencv_calib3d249.lib;opencv_video249.lib;opencv_legacy249.lib;opencv_nonfree249.lib;opencv_flann249.lib;libumfpack.lib;libamd.lib;libf77blas.lib;libatlas.lib;libg2c.lib;libgcc.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>./UMFPACK/lib</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
