--- a/GpuSubsenseM/GpuSubsenseM.vcxproj
+++ b/GpuSubsenseM/GpuSubsenseM.vcxproj
@@ -78,7 +78,7 @@
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>gdiplus.lib;cudart.lib;opencv_highgui249d.lib;opencv_core249d.lib;opencv_imgproc249d.lib;opencv_features2d249d.lib;opencv_calib3d249d.lib;opencv_video249d.lib;opencv_legacy249d.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;opencv_gpu249d.lib</AdditionalDependencies>
+      <AdditionalDependencies>gdiplus.lib;cudart.lib;opencv_highgui249d.lib;opencv_core249d.lib;opencv_imgproc249d.lib;opencv_features2d249d.lib;opencv_calib3d249d.lib;opencv_video249d.lib;opencv_legacy249d.lib;opencv_flann249d.lib;opencv_nonfree249d.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;opencv_gpu249d.lib</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>echo copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"
@@ -117,7 +117,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>gdiplus.lib;cudart.lib;opencv_highgui249.lib;opencv_core249.lib;opencv_imgproc249.lib;opencv_features2d249.lib;opencv_calib3d249.lib;opencv_video249.lib;opencv_legacy249.lib;opencv_gpu249.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib</AdditionalDependencies>
+      <AdditionalDependencies>gdiplus.lib;cudart.lib;opencv_highgui249.lib;opencv_core249.lib;opencv_imgproc249.lib;opencv_features2d249.lib;opencv_calib3d249.lib;opencv_video249.lib;opencv_legacy249.lib;opencv_gpu249.lib;opencv_flann249.lib;opencv_nonfree249.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>echo copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"
@@ -155,6 +155,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     </CudaCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ASAPWarping.h" />
     <ClInclude Include="block.h" />
     <ClInclude Include="ComSuperpixel.h" />
     <ClInclude Include="CudaBSOperator.h" />
@@ -175,18 +176,21 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClInclude Include="PictureHandler.h" />
     <ClInclude Include="RandUtils.h" />
     <ClInclude Include="SLIC.h" />
+    <ClInclude Include="SparseSolver.h" />
     <ClInclude Include="SubSenseBSProcessor.h" />
     <ClInclude Include="Test.h" />
     <ClInclude Include="timer.h" />
     <ClInclude Include="videoprocessor.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ASAPWarping.cpp" />
     <ClCompile Include="ComSuperpixel.cpp" />
     <ClCompile Include="flowIO.cpp" />
     <ClCompile Include="GCoptimization.cpp" />
     <ClCompile Include="GpuBackgroundSubtrator.cpp" />
     <ClCompile Include="GpuSuperpixel.cpp" />
     <ClCompile Include="graph.cpp" />
+    <ClCompile Include="LBSP.cpp" />
     <ClCompile Include="LinkedBlockList.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="maxflow.cpp" />
@@ -195,6 +199,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClCompile Include="MRFOptimize.cpp" />
     <ClCompile Include="PictureHandler.cpp" />
     <ClCompile Include="SLIC.cpp" />
+    <ClCompile Include="SparseSolver.cpp" />
     <ClCompile Include="Test.cpp" />
     <ClCompile Include="timer.cpp" />
   </ItemGroup>
