--- a/SubSenseBS/SubSenseBS.vcxproj
+++ b/SubSenseBS/SubSenseBS.vcxproj
@@ -50,13 +50,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>./UMFPACK/include;./UMFPACK/include/AMD/include;./UMFPACK/include/ufconfig</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(CULA_INC_PATH);./UMFPACK/include;./UMFPACK/include/AMD/include;./UMFPACK/include/ufconfig</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>opencv_highgui249d.lib;opencv_core249d.lib;opencv_imgproc249d.lib;opencv_features2d249d.lib;opencv_calib3d249d.lib;opencv_video249d.lib;opencv_legacy249d.lib;opencv_nonfree249d.lib;opencv_flann249d.lib;libumfpack.lib;libamd.lib;libf77blas.lib;libatlas.lib;libg2c.lib;libgcc.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>./UMFPACK/lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opencv_highgui249d.lib;opencv_core249d.lib;opencv_imgproc249d.lib;opencv_features2d249d.lib;opencv_calib3d249d.lib;opencv_video249d.lib;opencv_legacy249d.lib;opencv_nonfree249d.lib;opencv_flann249d.lib;cula_lapack_basic.lib;libumfpack.lib;libamd.lib;libf77blas.lib;libatlas.lib;libg2c.lib;libgcc.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>./UMFPACK/lib;$(CULA_LIB_PATH_32)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -68,15 +68,15 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>./UMFPACK/include;./UMFPACK/include/AMD/include;./UMFPACK/include/ufconfig</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(CULA_INC_PATH);./UMFPACK/include;./UMFPACK/include/AMD/include;./UMFPACK/include/ufconfig</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>opencv_highgui249.lib;opencv_core249.lib;opencv_imgproc249.lib;opencv_features2d249.lib;opencv_calib3d249.lib;opencv_video249.lib;opencv_legacy249.lib;opencv_nonfree249.lib;opencv_flann249.lib;libumfpack.lib;libamd.lib;libf77blas.lib;libatlas.lib;libg2c.lib;libgcc.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>./UMFPACK/lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opencv_highgui249.lib;opencv_core249.lib;opencv_imgproc249.lib;opencv_features2d249.lib;opencv_calib3d249.lib;opencv_video249.lib;opencv_legacy249.lib;opencv_nonfree249.lib;opencv_flann249.lib;cula_lapack_basic.lib;libumfpack.lib;libamd.lib;libf77blas.lib;libatlas.lib;libg2c.lib;libgcc.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>./UMFPACK/lib;$(CULA_LIB_PATH_32)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
