--- a/GpuSubsenseM/GpuSubsenseM.vcxproj.filters
+++ b/GpuSubsenseM/GpuSubsenseM.vcxproj.filters
@@ -85,6 +85,12 @@
     <ClInclude Include="FeaturePointRefine.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="SuperpixelComputer.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Common.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="CudaSuperpixel.cu">
@@ -170,6 +176,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="FeaturePointRefine.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="SuperpixelComputer.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
