in gpu version , KLT tracking on gpu is not working,but in cpu version, gpu klt works fine

--- a/GpuSubsenseM/GpuSubsenseM.vcxproj.filters
+++ b/GpuSubsenseM/GpuSubsenseM.vcxproj.filters
@@ -37,9 +37,6 @@
     <ClInclude Include="MRFOptimize.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="GpuBackgroundSubtractor.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="RandUtils.h">
       <Filter>头文件</Filter>
     </ClInclude>
@@ -96,6 +93,9 @@
     </ClInclude>
     <ClInclude Include="FGMaskPostProcess.h">
       <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="GpuBackgroundSubtractor.h">
+      <Filter>源文件</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
