修改了ASAP Warping中的dataterm 以及 alpha值得自适应调整，最后mrf优化时三项权值分别为 0.5 0.15 0.35时在moseg数据库获得最好的效果

--- a/GpuSubsenseM/GpuSubsenseM.vcxproj
+++ b/GpuSubsenseM/GpuSubsenseM.vcxproj
@@ -168,6 +168,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClInclude Include="energy.h" />
     <ClInclude Include="FeaturePointRefine.h" />
     <ClInclude Include="FGMaskPostProcess.h" />
+    <ClInclude Include="findHomography.h" />
     <ClInclude Include="FlowComputer.h" />
     <ClInclude Include="flowIO.h" />
     <ClInclude Include="GCoptimization.h" />
