--- a/GpuSubsenseM/GpuSubsenseM.vcxproj.filters
+++ b/GpuSubsenseM/GpuSubsenseM.vcxproj.filters
@@ -100,6 +100,9 @@
     <ClInclude Include="findHomography.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="BlockWarping.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="CudaSuperpixel.cu">
@@ -191,6 +194,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="WarpBackgroundSubtractor.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="BlockWarping.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
