--- a/GpuSubsenseM/GpuSubsenseM.vcxproj.filters
+++ b/GpuSubsenseM/GpuSubsenseM.vcxproj.filters
@@ -46,9 +46,6 @@
     <ClInclude Include="SubSenseBSProcessor.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="videoprocessor.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="CudaBSOperator.h">
       <Filter>Cuda</Filter>
     </ClInclude>
@@ -102,6 +99,9 @@
     </ClInclude>
     <ClInclude Include="BlockWarping.h">
       <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="videoprocessor.h">
+      <Filter>Cuda</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
