--- a/GpuMovingCameraBS/GpuMovingCameraBS.vcxproj.filters
+++ b/GpuMovingCameraBS/GpuMovingCameraBS.vcxproj.filters
@@ -134,6 +134,9 @@
     <ClInclude Include="ASAPWarping.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="LBP.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="WarpBackgroundSubtractor.cpp">
